2005-11-04  Roger While <simrw@sim-basis.de>

	* configure.ac : Fix COB_CC not equal CC

2005-11-01  Roger While <simrw@sim-basis.de>

	* configure.ac : Fix missing EGREP
	  Check for various libdb's individually as libdb may
	  not be linked to newer version (or at all - Cygwin)
	  Check for ncurses.h in include/ncurses/ncurses.h

2005-10-31  Roger While <simrw@sim-basis.de>

	* configure.ac : Pick up -Wno-pointer-sign
	  and the visibility attribute

2005-10-28  Roger While <simrw@sim-basis.de>

	* configure.ac : Propagate endian value

2005-10-27  Roger While <simrw@sim-basis.de>

	* configure.ac : MAC (Darwin) has different options when creating a
	  shared library as opposed to creating a loadable module.
	  Pick this up and export it to the Makefile's.

2005-10-26  Roger While <simrw@sim-basis.de>

	* configure.ac : Fix DB checking again
	* README : Minor corrections/additions

2005-10-14  Roger While <simrw@sim-basis.de>

	* configure.ac : Specify srcdir for cpucheck (make distcheck)

2005-10-13  Roger While <simrw@sim-basis.de>

	* configure.ac : Use basename for gcc

2005-10-06  Roger While <simrw@sim-basis.de>

	* README : Typo for Bison

2005-10-01  Roger While <simrw@sim-basis.de>

	* cpucheck.c : Some versions of GCC generate wrong SSE code
	  when compiling with P3/4 options. Stop this by also
	  specifying -mno-sse.

2005-07-31  Roger While <simrw@sim-basis.de>

	* Change configure default options for db, lfs64, ltdl
	  Add --with-patch-level=<n>
	* Add cpucheck.c to top level for configure

2005-06-28  Roger While <simrw@sim-basis.de>

	* Finally FUNCTIONS

2005-06-13  Roger While <simrw@sim-basis.de>

	* If ncurses not found, check for pdcurses

2005-06-11  Roger While <simrw@sim-basis.de>

	* New m4 macro cattribute.m4, autoreconf run

2005-06-01  Roger While <simrw@sim-basis.de>

	* configure.ac, configure : Change for MingW

2005-05-27  Roger While <simrw@sim-basis.de>

	* DB headers can also be in db4/ db4.1/ db4.2/ db4.3/
