@@ -1,3 +1,7 @@
+2005-11-06  Roger While <simrw@sim-basis.de>
+
+	* configure.ac : minor help text cleanup
+
 2005-11-04  Roger While <simrw@sim-basis.de>
 
 	* configure.ac : Fix COB_CC not equal CC
